--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-  "name": "cobweb/linkhandler",
+  "name": "faulancr/linkhandler",
   "type": "typo3-cms-extension",
   "description": "Create links to any record (e.g. news)",
-  "version": "3.1.3",
+  "version": "3.1.4",
   "license": [
     "GPL-2.0+"
   ],
