--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,6 @@
   "name": "faulancr/linkhandler",
   "type": "typo3-cms-extension",
   "description": "Create links to any record (e.g. news)",
-  "version": "3.1.4",
   "license": [
     "GPL-2.0+"
   ],
@@ -17,7 +16,7 @@
     }
   ],
   "require": {
-    "typo3/cms-core": ">=7.6.1,^8.4"
+    "typo3/cms-core": ">=7.6.1 <8.0.0"
   },
   "autoload": {
     "psr-4": {
